# verba

./: .gitignore  CHANGELOG.md  CI.md  Cargo.toml  PERFORMANCE.md  PRIVACY.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_TEST_MATRIX.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml  rust-toolchain.toml
.github/workflows/: quality.yml  security.yml
crates/verba-core/: Cargo.toml
crates/verba-core/src/: capture.rs  coordinator.rs  lib.rs  presentation.rs  proofreading.rs  secrets.rs  shortcut.rs  testing.rs  translation.rs
crates/verba-core/src/coordinator/: tests.rs
crates/verba-core/src/proofreading/: tests.rs  validation.rs
crates/verba-core/src/translation/: preferences.rs  tests.rs
crates/verba-ffi/: Cargo.toml
crates/verba-ffi/src/: api_key_settings.rs  application.rs  lib.rs  performance.rs  presentation.rs  processor.rs  shortcut_settings.rs  translation.rs  workflow_smoke_tests.rs
crates/verba-macos/: Cargo.toml
crates/verba-macos/src/: capture.rs  keychain.rs  lib.rs  pasteboard.rs  settings.rs  shortcut.rs
crates/verba-macos/src/capture/: accessibility.rs  synthetic_copy.rs  tests.rs
crates/verba-macos/src/keychain/: tests.rs
crates/verba-macos/src/shortcut/: carbon.rs  keycodes.rs  tests.rs
crates/verba-openai/: Cargo.toml  README.md
crates/verba-openai/src/: client.rs  connection.rs  lib.rs  proofreader.rs  transport.rs
crates/verba-openai/src/client/: tests.rs
crates/verba-openai/src/proofreader/: live_evaluation.rs  request.rs  response.rs  tests.rs
crates/verba-openai/tests/: contract.rs  fixture_contract.rs  live_smoke.rs  prompt_regressions.rs
crates/verba-openai/tests/fixtures/: proofreading-evaluation-v1.json
crates/verba-openai/tests/support/: client.rs  fixtures.rs  mock_server.rs
macos/Assets/: generate-app-icon.swift
macos/Verba/: AccessibilityPermissionController.swift  ApiKeySettingsController.swift  ApiKeySettingsView.swift  AppleTranslator.swift  ApplicationLifecycleController.swift  AutomaticUpdateController.swift  FirstRunSetup.swift  FirstRunSetupPages.swift  Info.plist  LaunchAtLoginSettings.swift  LocalizedCopy.swift  MenuBarContentView.swift  NativeAppleTranslator.swift  PasteboardWriter.swift  PerformanceSignposter.swift  PopupContentView.swift  PopupController.swift  PopupPanel.swift  PopupPositioner.swift  PopupPreviewFixtures.swift  ProofreadingResultView.swift  ResultCopyButton.swift  SettingsSupportController.swift  ShortcutRecorderView.swift  ShortcutSettingsController.swift  TargetLanguageSettingsController.swift  TargetLanguageSettingsView.swift  TranslationResultView.swift  TranslationSessionProvider.swift  VerbaApp.swift  VerbaRuntime.swift  VerbaSettingsView.swift
macos/Verba.xcodeproj/: project.pbxproj
macos/Verba.xcodeproj/xcshareddata/xcschemes/: Verba.xcscheme
macos/Verba/en.lproj/: Localizable.strings
macos/VerbaTests/: AccessibilityPermissionControllerTests.swift  AccessibilityReadinessTests.swift  ApiKeySettingsControllerTests.swift  AppleTranslatorTests.swift  ApplicationLifecycleControllerTests.swift  AutomaticUpdateControllerTests.swift  FirstRunSetupTests.swift  LaunchAtLoginControllerTests.swift  MenuBarContentTests.swift  PerformanceSignposterTests.swift  PopupRecoveryTests.swift  PopupVisualRegressionTests.swift  SettingsSupportControllerTests.swift  ShortcutSettingsControllerTests.swift  TargetLanguageSettingsControllerTests.swift
macos/scripts/: build-rust-bridge.sh  generate-app-icon.sh  uniffi-swift-6-sendable.patch
scripts/: check.sh  generate-third-party-notices.sh  notarize-release.sh  package-release.sh  package-signed-release.sh  portable-check.sh  prepare-update-feed.sh  security-check.sh  verify-release.sh
tools/uniffi-bindgen-swift/: Cargo.toml
