[workspace]
members = [
    "crates/verba-core",
    "crates/verba-ffi",
    "crates/verba-macos",
    "crates/verba-openai",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
