[workspace]
members = [
    "crates/verba-core",
    "crates/verba-ffi",
    "crates/verba-macos",
    "crates/verba-openai",
    "tools/uniffi-bindgen-swift",
]
resolver = "3"

[workspace.package]
version = "1.0.1"
edition = "2024"
rust-version = "1.87"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
