[package]
name = "verba-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
async-trait = "0.1.89"
futures = "0.3.32"
uniffi = "0.31.0"
verba-core = { path = "../verba-core" }

[target.'cfg(target_os = "macos")'.dependencies]
verba-macos = { path = "../verba-macos" }

[lints]
workspace = true
