[package]
name = "verba-macos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
verba-core = { path = "../verba-core" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSPasteboard", "NSPasteboardItem"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSArray", "NSData", "NSString"] }

[lints]
workspace = true
