[package]
name = "verba-macos"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
verba-core = { path = "../verba-core", version = "=1.0.1" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSPasteboard", "NSPasteboardItem"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSArray", "NSData", "NSString", "NSUserDefaults"] }
security-framework = "3.7.0"
security-framework-sys = "2.17.0"

[lints]
workspace = true
