[package]
name = "verba-openai"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.89"
futures = "0.3.32"
reqwest = { version = "0.12.22", default-features = false, features = ["native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
url = "2.5.4"
verba-core = { path = "../verba-core", version = "=1.0.1" }

[dev-dependencies]
verba-core = { path = "../verba-core", version = "=1.0.1", features = ["test-support"] }

[lints]
workspace = true
